:books: docs: added swagger description
